# sec-mdna-rag

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: company_metadata.json
data/filings/1018724/: 20200131_10-K_1018724.jsonl  20210203_10-K_1018724.jsonl  20220204_10-K_1018724.jsonl  20230203_10-K_1018724.jsonl
data/filings/1037038/: 20200527_10-K_1037038.jsonl  20210520_10-K_1037038.jsonl  20220524_10-K_1037038.jsonl  20230525_10-K_1037038.jsonl
data/filings/104169/: 20200320_10-K_104169.jsonl  20210319_10-K_104169.jsonl  20220318_10-K_104169.jsonl  20230317_10-K_104169.jsonl
data/filings/1045810/: 20200220_10-K_1045810.jsonl  20210226_10-K_1045810.jsonl  20220318_10-K_1045810.jsonl  20230224_10-K_1045810.jsonl
data/filings/1048286/: 20200227_10-K_1048286.jsonl  20210218_10-K_1048286.jsonl  20220215_10-K_1048286.jsonl  20230214_10-K_1048286.jsonl
data/filings/1090727/: 20200220_10-K_1090727.jsonl  20210222_10-K_1090727.jsonl  20220222_10-K_1090727.jsonl  20230221_10-K_1090727.jsonl
data/filings/1467373/: 20201022_10-K_1467373.jsonl  20211015_10-K_1467373.jsonl  20221012_10-K_1467373.jsonl  20231012_10-K_1467373.jsonl
data/filings/2488/: 20200204_10-K_2488.jsonl  20210129_10-K_2488.jsonl  20220203_10-K_2488.jsonl  20230227_10-K_2488.jsonl
data/filings/29989/: 20200211_10-K_29989.jsonl  20210218_10-K_29989.jsonl  20220209_10-K_29989.jsonl  20230208_10-K_29989.jsonl
data/filings/313927/: 20200218_10-K_313927.jsonl  (+3 more)
src/: app.py  builder.py  cli.py  config.py  corpus.py  indexing.py  labels.py  llm.py  query.py  rag_db.py  retrieval.py  utils.py
(+40 files in other folders)
